--- a/Charitystudies.ipynb
+++ b/Charitystudies.ipynb
@@ -249,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -314,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -379,7 +379,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -488,10 +488,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "88 tokens\n",
+      "5\n",
+      "95 tokens\n",
       "If you wish to spend tokens on virtual raffles for a chance to win a $20 gift card you may now do so\n",
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -534,11 +534,11 @@
       "Your remaining tokens have been saved for year two. \n",
       "\n",
       "You have just completed year two. You have gained 100 tokens in addition to your saved tokens from year 1.\n",
-      "You have 176 tokens to spend, donate, or save.\n",
+      "You have 190 tokens to spend, donate, or save.\n",
       "\n",
       "Enter anything to continue\n",
       "\n",
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -617,7 +617,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "176 tokens\n"
+      "190 tokens\n"
      ]
     }
    ],
@@ -641,10 +641,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "164 tokens\n",
+      "5\n",
+      "185 tokens\n",
       "If you wish to spend tokens on virtual raffles for a chance to win a $20 gift card you may now do so\n",
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -685,11 +685,11 @@
       "Your remaining tokens have been saved for year three.\n",
       "\n",
       "You have just completed year three. You have gained 100 tokens in addition to your saved tokens from years 1 and 2.\n",
-      "You have 252 tokens to spend, donate, or save.\n",
+      "You have 280 tokens to spend, donate, or save.\n",
       "\n",
       "Enter anything to continue\n",
       "\n",
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -781,7 +781,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "252 tokens\n"
+      "280 tokens\n"
      ]
     }
    ],
@@ -805,8 +805,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "240 tokens\n",
+      "5\n",
+      "275 tokens\n",
       "If you wish to spend tokens on virtual raffles for a chance to win a $20 gift card you may now do so\n"
      ]
     }
@@ -833,7 +833,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -862,11 +862,11 @@
       "Your remaining tokens have been saved for year four.\n",
       "\n",
       "You have just completed year four. You have gained 100 tokens in addition to your saved tokens from years 1,2 and 3.\n",
-      "You have 328 tokens to spend, donate, or save.\n",
+      "You have 370 tokens to spend, donate, or save.\n",
       "\n",
       "Enter anything to continue\n",
       "\n",
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -948,7 +948,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "328 tokens\n"
+      "370 tokens\n"
      ]
     }
    ],
@@ -969,13 +969,36 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "Jupyter.keyboard_manager.disable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "316 tokens\n",
+      "5\n",
+      "365 tokens\n",
       "If you wish to spend tokens on virtual raffles for a chance to win a $20 gift card you may now do so\n",
-      "12\n"
+      "5\n"
      ]
     }
    ],
@@ -1004,7 +1027,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "Jupyter.keyboard_manager.disable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -1015,7 +1061,7 @@
       "Your remaining tokens have been saved for year five.\n",
       "\n",
       "You have just completed year five.You have gained 100 tokens in addition to your saved tokens from years 1,2,3, and 4.\n",
-      "You have 404 tokens to spend or donate. You cannot save any tokens for after this year.\n",
+      "You have 460 tokens to spend or donate. You cannot save any tokens for after this year.\n",
       "\n",
       "\n",
       "\n"
@@ -1034,6 +1080,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "Jupyter.keyboard_manager.disable()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1044,7 +1113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -1056,7 +1125,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,19 +1148,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "Jupyter.keyboard_manager.disable()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "404 tokens\n"
+      "460 tokens\n"
      ]
     }
    ],
    "source": [
     "print(\"%s tokens\" %bank_account)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "%%javascript\n",
+    "Jupyter.keyboard_manager.disable()"
    ]
   },
   {
@@ -1103,9 +1218,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "Jupyter.keyboard_manager.disable()"
@@ -1113,39 +1241,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "12\n",
-      "All remaining tokens (392) will be spent on the chance to win a $20 gift card.\n",
+      "6\n",
+      "All remaining tokens (454) will be spent on the chance to win a $20 gift card.\n",
       "\n",
       "\n",
       "Thank you for completing the token simulation! I will contact you if you win a gift card. Good luck! Your results are shown below. Please copy them into survey monkey and answer a few quick exit questions.\n",
       "\n",
       "\n",
-      "Tokens donated to the Hurricane Damage Prevention Center in year 1: 12\n",
+      "Tokens donated to the Hurricane Damage Prevention Center in year 1: 5\n",
       "\n",
-      "Tokens spent on the chance to win the $20 gift card in year 1: 12\n",
+      "Tokens spent on the chance to win the $20 gift card in year 1: 5\n",
       "\n",
-      "Tokens donated to National Suicide Prevention Lifeline in year 2: 12\n",
+      "Tokens donated to National Suicide Prevention Lifeline in year 2: 5\n",
       "\n",
-      "Tokens spent on the chance to win the $20 gift card in year 2: 12\n",
+      "Tokens spent on the chance to win the $20 gift card in year 2: 5\n",
       "\n",
-      "Tokens donated to the Drunk Driving Prevention Program in year 3: 12\n",
+      "Tokens donated to the Drunk Driving Prevention Program in year 3: 5\n",
       "\n",
-      "Tokens spent on the chance to win the $20 gift card in year 3: 12\n",
+      "Tokens spent on the chance to win the $20 gift card in year 3: 5\n",
       "\n",
-      "Tokens donated to Moms for Vaccines in year 4: 12\n",
+      "Tokens donated to Moms for Vaccines in year 4: 5\n",
       "\n",
-      "Tokens spent on the chance to win the $20 gift card in year 4: 12\n",
+      "Tokens spent on the chance to win the $20 gift card in year 4: 5\n",
       "\n",
-      "Tokens donated to Smokey Bear Foundation in year 5: 12\n",
+      "Tokens donated to Smokey Bear Foundation in year 5: 6\n",
       " \n",
-      "Tokens spent on the chance to win the $20 gift card in year 5: 392\n",
+      "Tokens spent on the chance to win the $20 gift card in year 5: 454\n",
       "\n",
       "\n",
       "\n",
@@ -1199,10 +1327,26 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 39,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": [
+       "Jupyter.keyboard_manager.disable()\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "# "
+    "%%javascript\n",
+    "Jupyter.keyboard_manager.disable()"
    ]
   }
  ],
